# EulerEasel

./: .gitignore  CMakeLists.txt  EulerEasel.md  README.md  graphswitch_roadmap.md
Src/: csr_slice.py
Src/Configuration/: csr_slice.py  graph_configuration.py  synthetic_generator.py
Src/Server/CPU/: binding.cpp  csr  ell  ellpack_format.cpp  hybrid_ell-csr.cpp  standard_spmv.cpp
Src/Server/CPU/results/: CSR_res.txt  CSR_res_skewed.txt  ELL_res.txt  ELL_res_uniform.txt  Hybrid_res.txt  csr_py.txt  csr_py_avx.txt  ell_py_avx.txt
Src/Server/CPU/utils/: create_file.h  datatype.h  file_parser.h  matrix_dim.h  vector_gen.h
Src/Server/CPU/utils/format/: csr_format.h  ellpack_format.h
Testing/: build_test1.py  sp_matrix_test.py
src/: test_dataset.cpp
src/Serial-Baseline/algorithms/: bfs.cpp  pagerrank.cpp  pagerrank_power_iteration.cpp
src/Serial-Baseline/utilities/: csr_construction.h  csr_type.h  file_parser.h  graph_io.h  graph_type.h  spMV_kernel.h
